# graph-maze-pathfinder

./: .gitignore  README.md  desktop.py  graph_algorithms.py  maze.py  maze_gui.py  maze_runner.py  pyproject.toml  runner.py
sample_mazes/: weighted_maze.mz
sample_output/: exploration.csv  statistics.txt
tests/: test_pathfinding.py
web/: README.md  index.html
web/js/: algorithms.js  app.js  maze.js  render.js
