[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-maze-pathfinder"
version = "1.0.0"
description = "Graph-based maze pathfinding visualiser with weighted and unweighted search algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# The core (engine, CLI, Tkinter GUI, tests) has zero dependencies.
# The polished web-based desktop shell is opt-in:
#     python3 -m pip install ".[desktop]"
[project.optional-dependencies]
desktop = ["pywebview>=5.0"]

[project.scripts]
maze-runner = "maze_runner:main"
maze-gui = "maze_gui:run_gui"
maze-desktop = "desktop:run"

[tool.setuptools]
py-modules = [
    "graph_algorithms",
    "maze",
    "maze_gui",
    "maze_runner",
    "runner",
    "desktop",
]
